# openlabels

./: .dockerignore  .env.example  .gitignore  ARCHITECTURAL_PLANS_FOR_COMPLETION.md  AUDIT_REPORT.md  CLAUDE_AUDIT_REPORT.md  CODEBASE_AUDIT.md  CODEBASE_AUDIT_2026_02_06.md  CODE_QUALITY_AUDIT.md  COMPREHENSIVE_AUDIT_REPORT.md  Cargo.toml  DEMO_PLAN.md  Dockerfile  FRONTEND_REVIEW.md  LICENSE  MODULE_QUALITY_REVIEW.md  NO_TEST_COVERAGE.md  PLAN.md  PRODUCTION_AUDIT_REPORT.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt
.github/: secret_scanning.yml
alembic/: env.py
archive/: AI_SLOP_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  DEPENDENCIES.md  GA_READINESS_REMEDIATION.md  REMEDIATION_PHASES.md
calibration/: CALIBRATION_RESULTS.md  entity_mapping.yaml  run_calibration.py
data/: corpus.jsonl
docs/: AUDIT_FINDINGS.md  AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  OLAP_AND_DATA_LAKE_ARCHITECTURE_PLAN.md  PRODUCTION_PLAN.md  calibration-plan.md  filesystem-engine-v2-architecture.md  frontend-architecture.md  layout.pptx  openlabels-architecture-v3.md  openlabels-entity-registry-v1.md  openlabels-server-architecture-v1.md  openlabels-server-spec-v1.md  openlabels-spec-v1.md  openlabels-spec-v2.md  openlabels-v1-filesystem-engine.md  ux-workflow-design.md
frontend/: .env.development  .env.production  index.html  logo-preview.html  package-lock.json  package.json  vite.config.ts
installer/: README.md  build.ps1  config.sample.yaml  openlabels.iss
openlabels/: __init__.py  __main__.py  _rust.pyi  context.py  dashboard_models.py  health.py  shutdown.py
openrisk/: .gitignore  LICENSE  README.md  requirements-minimal.txt  requirements.txt
packaging/: build-windows.ps1  openlabels.spec
scripts/: benchmark_detector.py  run-tests.sh  sample_benchmark_data.json
scrubiq/: .gitignore  README.md  __init__.py  cli.py  constants.py  core.py  instance_pool.py  llm_client.py  logging_utils.py  pyproject.toml  run_api.py  server.py
scrubiq/api/: __init__.py  app.py  limiter.py  settings.py
scrubiq/api/routes/: __init__.py  admin.py  memory.py  reviews.py  schemas.py
scrubiq/crypto/: keys.py
scrubiq/detectors/: __init__.py  financial.py  government.py  labels.py  secrets.py
scrubiq/files/: document_templates.py  enhanced_ocr.py  extractor.py  layout.py  temp_storage.py  validators.py
scrubiq/image_protection/: __init__.py  signature_detection.py
scrubiq/mixins/: chat.py  file.py  token.py
scrubiq/pipeline/: __init__.py  confidence.py  conversation_context.py  coref.py  entity_graph.py  entity_resolver.py  geo_signals.py  merger.py  normalizer.py  repeats.py  restorer.py  safe_harbor.py  tokenizer.py
scrubiq/scrubiq/: SDK.md  config.py  exceptions.py  prompts.py  rate_limiter.py  sdk.py  types.py
scrubiq/scrubiq/api/: dependencies.py  errors.py
scrubiq/scrubiq/api/routes/: auth.py  config.py  conversations.py  core.py  files.py  keys.py
scrubiq/scrubiq/crypto/: __init__.py  aes.py  kdf.py
scrubiq/scrubiq/detectors/: base.py  checksum.py  context_enhancer.py  dictionaries.py  llm_verifier.py  ml.py  ml_onnx.py  orchestrator.py  structured.py
scrubiq/scrubiq/files/: __init__.py  jobs.py  ocr.py  processor.py
scrubiq/scrubiq/gateway/: __init__.py
scrubiq/scrubiq/image_protection/: barcode_detection.py  document_layout.py  face_detection.py  handwriting_detection.py  image_phi_processor.py  metadata_stripper.py
scrubiq/scrubiq/mixins/: __init__.py  conversation.py  llm.py
scrubiq/scrubiq/pipeline/: gender.py  span_validation.py
scrubiq/scrubiq/review/: __init__.py
scrubiq/scrubiq/services/: api_keys.py  config_provider.py
scrubiq/scrubiq/storage/: __init__.py  conversations.py  tokens.py
scrubiq/services/: __init__.py  entity_registry.py  session.py
scrubiq/storage/: audit.py  database.py  images.py  memory.py
scrubiq/tests/: __init__.py  test_constants.py  test_exceptions.py  test_instance_pool.py  test_rate_limiter.py  test_sdk.py  test_sdk_interfaces.py  test_sdk_methods.py  test_server.py
scrubiq/tests/api/: test_api_coverage.py  test_app.py  test_errors.py  test_limiter.py
scrubiq/tests/api/routes/: test_auth.py  test_conversations_routes.py  test_core_routes.py  test_reviews.py  test_routes_admin.py  test_routes_files.py  test_routes_keys.py  test_schemas.py
scrubiq/tests/crypto/: __init__.py  test_aes.py  test_kdf.py
scrubiq/tests/detectors/: test_checksum.py  test_dictionaries.py  test_financial.py  test_government.py  test_labels_and_base.py  test_llm_verifier.py  test_ml.py  test_ml_onnx.py  test_orchestrator.py  test_patterns.py  test_secrets.py
scrubiq/tests/files/: __init__.py  test_enhanced_ocr.py  test_extractor.py  test_jobs.py  test_validators.py
scrubiq/tests/image_protection/: test_barcode_detection.py  test_document_layout.py  test_face_detection.py  test_image_protection.py  test_metadata_stripper.py  test_signature_detection.py
scrubiq/tests/mixins/: test_conversation.py  test_file.py  test_llm.py
scrubiq/tests/pipeline/: test_allowlist.py  test_confidence.py  test_conversation_context.py  test_deduplication.py  test_entity_graph.py  test_gender.py  test_merge_spans.py  test_merger.py  test_normalizer.py  test_repeats.py  test_restorer.py  test_safe_harbor.py  test_span_validation.py  test_type_normalization.py  test_types_compatible.py
scrubiq/tests/services/: test_api_keys.py  test_config_provider.py
scrubiq/tests/storage/: test_audit.py  test_conversations.py  test_memory.py
src/: lib.rs  validators.rs
src/openlabels/core/_rust/: Cargo.toml  __init__.py  build.sh  patterns_py.py  pyproject.toml  validators_py.py
src/openlabels/core/_rust/src/: checksum.rs  file_filter.rs  lib.rs  patterns.rs  scoring.rs  spans.rs  validators.rs
test_docs/: AUDIT_FINDINGS.md  CLAUDE_AUDIT_REPORT.md  SECURITY_AUDIT_REPORT.md
tests/: AUDIT_REPORT.md  conftest.py  test_additional_patterns_detector.py  test_auth.py  test_checksum_validation.py  test_cli.py  test_cli_integration.py  (+31 more)
(+920 files in other folders)
