[package]
name = "openlabels"
version = "0.1.0"
edition = "2021"
description = "Native Rust extension for OpenLabels pattern matching"

[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
regex = "1.10"
once_cell = "1.19"
rayon = "1.10"  # Parallel iteration for batch processing
memchr = "2.7"  # Fast byte searching (SIMD optimized)
aho-corasick = "1.1"  # Multi-pattern string matching
