[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openlabels"
version = "1.0.0"
description = "Open Source Data Classification & Auto-Labeling Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Chillbot.io" },
]
keywords = [
    "data-classification",
    "auto-labeling",
    "mip",
    "dlp",
    "pii-detection",
    "sensitivity-labels",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    # Server
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",  # Required by pydantic EmailStr
    "jinja2>=3.1.0",  # HTML templating for web UI
    "python-multipart>=0.0.6",  # Form handling for FastAPI

    # Database
    "sqlalchemy>=2.0.0,<3",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "uuid-utils>=0.6.0",  # Fast UUIDv7 generation (Rust)

    # Auth
    "PyJWT[crypto]>=2.8.0",
    "msal>=1.26.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",

    # Utils
    "httpx>=0.26.0",
    "pyyaml>=6.0.0",
    "aiofiles>=23.2.0",
    "psutil>=5.9.0",  # System resource monitoring
    "croniter>=2.0.0",  # Cron expression parsing for schedules

    # Caching
    "redis>=5.0.0",  # Redis client with async support

    # File extractors
    "pymupdf>=1.23.0",  # PDF text extraction
    "python-docx>=1.1.0",  # DOCX text extraction
    "openpyxl>=3.1.0",  # XLSX text extraction
    "python-pptx>=0.6.23",  # PPTX text extraction
    "extract-msg>=0.48.0",  # Outlook MSG file extraction
    "beautifulsoup4>=4.12.0",  # HTML parsing
    "pillow>=10.2.0",  # Image processing

    # Security
    "slowapi>=0.1.9",  # Rate limiting
    "limits[redis]>=3.0.0",  # Redis backend for distributed rate limiting
    "defusedxml>=0.7.0",  # XXE-safe XML parsing

    # Observability
    "sentry-sdk[fastapi]>=2.0.0",  # Error tracking and performance monitoring
    "prometheus-client>=0.19.0",  # Prometheus metrics

    # Analytics (OLAP data lake)
    "duckdb>=1.0.0",  # Embedded columnar query engine
    "pyarrow>=15.0.0",  # Arrow tables, Parquet read/write

    # ML Inference (core)
    "onnxruntime>=1.17.0,<2",  # ONNX model inference
    "transformers>=4.36.0,<5",  # NER models
    "tokenizers>=0.15.0",  # Fast tokenization
    "numpy>=1.24.0,<2",
]

[project.optional-dependencies]
mip = [
    "pythonnet>=3.0.0",
]
windows = [
    "pywin32>=306",
    "httpx>=0.26.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-env>=1.1.0",  # Set env vars in pyproject.toml for tests
    "pytest-mock>=3.12.0",  # Convenient mocking fixtures
    "pytest-httpx>=0.28.0",  # Mock httpx requests in tests
    "factory-boy>=3.3.0",  # Test data factories
    "faker>=22.0.0",  # Generate fake test data
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    # OCR testing dependencies
    "rapidocr-onnxruntime>=1.3.0",
    # High-performance regex (optional, may need system libs)
    "hyperscan>=0.7.0",
    # Rust extension build tooling
    "maturin>=1.4.0",
]
# SIMD-accelerated regex for high-performance pattern matching
hyperscan = [
    "hyperscan>=0.7.0",  # Intel Hyperscan - 10-100x faster regex
]
# OCR support
ocr = [
    "pytesseract>=0.3.10",  # Python wrapper for Tesseract OCR (requires tesseract binary)
    "rapidocr-onnxruntime>=1.3.0",  # ONNX-based OCR (no external binary needed)
]
# Cloud object store adapters (Phase L)
s3 = [
    "boto3>=1.34.0",
]
gcs = [
    "google-cloud-storage>=2.14.0",
    "google-cloud-pubsub>=2.19.0",
]
azure = [
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
]
# Report generation (Phase M)
reports = [
    "weasyprint>=62.0",
]
all = [
    "openlabels[mip,windows,dev,hyperscan,ocr,s3,gcs,azure,reports]",
]

[project.scripts]
openlabels = "openlabels.__main__:main"

[project.urls]
Homepage = "https://github.com/chillbot-io/openlabels"
Documentation = "https://github.com/chillbot-io/openlabels/tree/main/docs"
Repository = "https://github.com/chillbot-io/openlabels"
Issues = "https://github.com/chillbot-io/openlabels/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openlabels"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "UP006", # use X instead of typing.X — needs `from __future__ import annotations` for 3.10
    "UP007", # use X | Y instead of Union[X, Y] — needs `from __future__ import annotations` for 3.10
    "UP045", # use X | None instead of Optional[X] — needs `from __future__ import annotations` for 3.10
]

[tool.ruff.lint.isort]
known-first-party = ["openlabels"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    # Auth / .NET interop
    "msal", "msal.*",
    "pythonnet", "pythonnet.*",
    "clr", "clr.*",
    "Microsoft", "Microsoft.*",
    # Web framework
    "fastapi", "fastapi.*",
    "starlette", "starlette.*",
    "uvicorn", "uvicorn.*",
    "slowapi", "slowapi.*",
    "websockets", "websockets.*",
    # Database
    "sqlalchemy", "sqlalchemy.*",
    "alembic", "alembic.*",
    "redis", "redis.*",
    # Analytics
    "duckdb", "duckdb.*",
    "pyarrow", "pyarrow.*",
    # HTTP / async
    "httpx", "httpx.*",
    "aiofiles", "aiofiles.*",
    # ML / ONNX / NLP
    "onnxruntime", "onnxruntime.*",
    "openlabels_matcher", "openlabels_matcher.*",
    "torch", "torch.*",
    "intel_extension_for_pytorch", "intel_extension_for_pytorch.*",
    "transformers", "transformers.*",
    "tokenizers", "tokenizers.*",
    "optimum", "optimum.*",
    "numpy", "numpy.*",
    "hyperscan", "hyperscan.*",
    # Document extraction
    "docx", "docx.*",
    "pptx", "pptx.*",
    "PyPDF2", "PyPDF2.*",
    "pypdf", "pypdf.*",
    "fitz", "fitz.*",
    "bs4", "bs4.*",
    "extract_msg", "extract_msg.*",
    "striprtf", "striprtf.*",
    "PIL", "PIL.*",
    "pillow_heif", "pillow_heif.*",
    "pytesseract", "pytesseract.*",
    "rapidocr_onnxruntime", "rapidocr_onnxruntime.*",
    # Observability
    "prometheus_client", "prometheus_client.*",
    "sentry_sdk", "sentry_sdk.*",
    # Cloud SDKs
    "boto3", "boto3.*",
    "botocore", "botocore.*",
    "google", "google.*",
    "azure", "azure.*",
    # Utilities
    "pydantic_settings", "pydantic_settings.*",
    "click", "click.*",
    "intervaltree", "intervaltree.*",
    "limits", "limits.*",
    "setproctitle", "setproctitle.*",
    "uuid_utils", "uuid_utils.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=openlabels --cov-report=term-missing"
env = [
    # PostgreSQL test database - set to your local container
    # Default assumes: docker compose -f docker-compose.test.yml up -d
    # Override via environment variable for CI/CD environments
    "D:TEST_DATABASE_URL=postgresql+asyncpg://postgres:test@localhost:5432/openlabels_test",
    # Redis for distributed state, caching, and rate limiting
    # Override via environment variable for CI/CD environments
    "D:REDIS_URL=redis://localhost:6379",
]
