[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrubiq"
version = "2.8.0"
description = "PHI/PII Detection & Redaction Pipeline for Healthcare AI"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "Privplay"}
]
keywords = ["phi", "pii", "hipaa", "healthcare", "privacy", "redaction", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    # Core web framework
    "fastapi>=0.100.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.23.0,<1.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0,<1.0.0",
    "slowapi>=0.1.9",

    # Security
    "cryptography>=41.0.0,<45.0.0",
    "sqlcipher3-binary>=0.5.0",
    "defusedxml>=0.7.1",  # XXE protection for XML parsing

    # File processing
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "striprtf>=0.0.26",
    "Pillow>=10.0.0",
    "python-magic>=0.4.27",
    "opencv-python-headless>=4.8.0",
    "rapidocr-onnxruntime>=1.3.0",
    "pyzbar>=0.1.9",

    # ML (ONNX-only, no torch)
    "numpy>=1.24.0,<2.0.0",
    "tokenizers>=0.15.0",
    "onnxruntime>=1.16.0,<2.0.0",

    # LLM clients
    "anthropic>=0.18.0,<1.0.0",
    "openai>=1.0.0,<2.0.0",
    "tiktoken>=0.5.0",

    # Performance
    "pyahocorasick>=2.0.0",
    "intervaltree>=3.1.0",
    "orjson>=3.9.0",
    "cachetools>=5.3.0",

    # Utils
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.2.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.92.0",
    "Faker>=22.0.0",
    "respx>=0.20.0",
    "freezegun>=1.2.0",
    "psutil>=5.9.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=23.0.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
gpu = [
    "onnxruntime-gpu>=1.16.0",
]
training = [
    "torch>=2.1.0",
    "accelerate>=0.25.0",
    "datasets>=2.14.0",
    "wandb>=0.16.0",
    "seqeval>=1.2.0",
]

[project.scripts]
scrubiq = "scrubiq.cli:main"

[project.urls]
Homepage = "https://github.com/privplay/scrubiq"
Documentation = "https://docs.privplay.com/scrubiq"
Repository = "https://github.com/privplay/scrubiq"

[tool.setuptools.packages.find]
where = ["."]
include = ["scrubiq*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "security: security-related tests",
    "adversarial: adversarial input tests",
    "ui: UI/browser tests",
    "api: API integration tests",
    "unit: unit tests",
    "regression: regression tests",
    "asyncio: async tests",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = ["scrubiq"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/conftest.py",
    "*/migrations/*",
    "*/cli.py",  # CLI entry points
    "*/_version.py",
]

[tool.coverage.paths]
source = [
    "scrubiq/",
    "*/scrubiq/",
]

[tool.coverage.report]
# Fail if coverage drops below threshold
fail_under = 80
precision = 2
show_missing = true
skip_covered = false
skip_empty = true

# Exclude specific patterns from coverage reporting
exclude_lines = [
    # Standard exclusions
    "pragma: no cover",
    "def __repr__",
    "def __str__",

    # Debug/development code
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",

    # Defensive assertions that should never execute
    "raise AssertionError",
    "raise NotImplementedError",
    "raise RuntimeError\\(\"unreachable\"\\)",

    # Abstract methods
    "@abstractmethod",
    "@abc.abstractmethod",

    # Optional dependencies / import guards
    "except ImportError:",
    "except ModuleNotFoundError:",

    # Logging setup
    "logging\\.getLogger",
    "logger = logging",
]

# Partial branches that don't need full coverage
partial_branches = [
    "pragma: no branch",
    "if __debug__:",
]

[tool.coverage.html]
directory = "htmlcov"
title = "ScrubIQ Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
